--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,22 @@
 {
   "name": "FanDuel Lineup Optimizer",
-  "version": "1.1",
+  "version": "1.0",
   "manifest_version": 2,
   "description": "This is simple tool that helps you build the optimal lineup for the day or week.",
+  "author": "Pauras Swami",
   "icons": {
     "16": "icon.png",
     "48": "icon.png",
     "128": "icon.png"
   },
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "table/index2.html"
+  },
   "permissions": ["<all_urls>", "https://*/*","https://rotogrinders.com/lineup-builder/nba?site=fanduel", "https://www.fanduel.com/*", "https://api.fanduel.com/*"],
   "content_scripts": [ {
     "js": [ "jquery-1.11.3.js", "content_script.js"],
     "matches": [ "https://www.fanduel.com/*", "https://api.fanduel.com/*"]
-  }]
+  }],
+  "content_security_policy": "script-src 'self' https://ajax.googleapis.com https://cdnjs.cloudflare.com; object-src 'self'"
 }
